# personal_manager

./: .env  .env.example  .gitignore  404_ERROR_FIX.md  API_FIXES_COMPLETE.md  API_TESTING_GUIDE.md  FIELD_NAME_FIX.md  LOAN_LIABILITY_USAGE.md  README.md  TESTING_SETUP.md  VPS_API_CONFIGURATION.md  auth_api.js  backend_auth_improved.rs  jwt.rs  migration.sql  models.rs  package.json  pubspec.yaml  roadmap.md  routes.rs  test_auth.sh
android/app/: build.gradle
backend/: Cargo.toml
backend/src/: main.rs
backend/src/models/: mod.rs  user.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: api_config.dart
lib/models/: account.dart  app_notification.dart  budget.dart  calendar_event.dart  category.dart  dashboard_config.dart  liability.dart  loan.dart  pdf_report_data.dart  recurring_transaction.dart  savings_goal.dart  transaction.dart  user.dart
lib/providers/: account_provider.dart  auth_provider.dart  backup_provider.dart  budget_provider.dart  calendar_provider.dart  category_provider.dart  currency_provider.dart  dashboard_config_provider.dart  liability_provider.dart  loan_provider.dart  notification_provider.dart  recurring_transaction_provider.dart  savings_goal_provider.dart  sync_provider.dart  theme_provider.dart  transaction_provider.dart
lib/screens/: accounts_screen.dart  auth_splash_screen.dart  budget_screen.dart  calendar_screen.dart  (+17 more)
linux/: CMakeLists.txt  my_application.cc
scripts/: create-database.js
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+38 files in other folders)
