[package]
name = "personal_manager_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-web-lab = "0.20"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel_migrations = "2.1"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.10"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client (for testing)
reqwest = { version = "0.11", features = ["json"] }

# Rate limiting
actix-limitation = "0.4"

# Configuration
config = "0.13"

# Validation
regex = "1.10"

[dev-dependencies]
actix-rt = "2.9"